charts/consul/examples/example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consul-example-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consul-example-green
  template:
    metadata:
      labels:
        app: consul-example-green
    spec:
      containers:
        - name: example
          image: 'consul:latest'
          volumeMounts:
            - name: us-states-volume
              mountPath: /etc/config
          command:
            - '/bin/sh'
            - '-ec'
            - |
              export CONSUL_HTTP_ADDR="${HOST_IP}:9500"
              cd /etc/config
              consul kv import @us-states.json
      volumes:
        - name: us-states-volume
          configMap:
            name: us-states-green
            items:
              - key: us-states.json
                path: us-states.json
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consul-example-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consul-example-blue
  template:
    metadata:
      labels:
        app: consul-example-blue
    spec:
      containers:
        - name: example
          image: 'consul:latest'
          volumeMounts:
            - name: us-states-volume
              mountPath: /etc/config
          command:
            - '/bin/sh'
            - '-ec'
            - |
              export CONSUL_HTTP_ADDR="${HOST_IP}:8500"
              cd /etc/config
              consul kv import @us-states.json
      volumes:
        - name: us-states-volume
          configMap:
            name: us-states-blue
            items:
              - key: us-states.json
                path: us-states.json
